prevent item list text from wrapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,8 @@ html, body {
 	color: inherit; 
 	text-decoration: none;
 	display: block;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .photo:hover {
